--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "content/themes/casper"]
 	path = content/themes/casper
 	url = git://github.com/TryGhost/Casper.git
+[submodule "ghost-theme"]
+	path = ghost-theme
+	url = git@github.com:robinxie/ghost-theme.git
