--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "content/themes/ghost-theme"]
 	path = content/themes/ghost-theme
 	url = git://github.com/robinxie/ghost-theme.git
+[submodule "content/themes/ghostium"]
+	path = content/themes/ghostium
+	url = git@github.com:robinxie/ghostium.git
