--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,4 @@
 	url = git://github.com/robinxie/ghost-theme.git
 [submodule "content/themes/ghostium"]
 	path = content/themes/ghostium
-	url = git@github.com:robinxie/ghostium.git
+	url = git@github.com/robinxie/ghostium.git
